# rust-static-lib-test

./: .gitignore  README.md  build.sh
c-app/: CMakeLists.txt  main.c  rust.h
rust-lib-1/: Cargo.toml
rust-lib-1/src/: lib.rs
rust-lib-2/: Cargo.toml
rust-lib-2/src/: lib.rs
